--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-"scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview",
-  "start": "vite preview --port 10000"
-},
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "start": "vite preview --port 10000"
+  },
   "dependencies": {
+    "@headlessui/react": "^2.2.2",
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2",  
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
