--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.2.2",
     "axios": "^1.7.7",
     "dompurify": "^3.2.6",
+    "lucide-react": "^0.546.0",
     "marked": "^15.0.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
